[gd_scene load_steps=12 format=3 uid="uid://cf0g4vstsefeu"]

[ext_resource type="Script" path="res://enemies/Enemy.gd" id="1_6a0dd"]
[ext_resource type="Texture2D" uid="uid://bpkc1gf45xkya" path="res://whitecircle.png" id="2_fesmu"]
[ext_resource type="Texture2D" uid="uid://bwtoprrjqqqnt" path="res://enemies/Arana.png" id="2_ls287"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sanha"]
radius = 31.0644

[sub_resource type="Animation" id="Animation_4itpy"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteTransform/Sprite:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteTransform/Sprite:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteTransform/Sprite:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpriteTransform/Sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_2gbre"]
resource_name = "hit"
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteTransform/Sprite:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.49, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1.51, 0.64), Vector2(0.91, 1.145), Vector2(1.067, 0.954), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_sg6r8"]
resource_name = "idle"
length = 1.5
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteTransform/Sprite:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1.08, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.7, 1.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteTransform/Sprite:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0.895, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.7, 1.5)
}

[sub_resource type="Animation" id="Animation_vwbuu"]
resource_name = "walk"
length = 0.3
loop_mode = 1
step = 0.01
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteTransform/Sprite:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.04, -19, -42, -0.06, -1, 0.08, 3, 0, -0.06, -27, 0.25, 0),
"times": PackedFloat32Array(0, 0.14, 0.3)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kjahw"]
_data = {
"RESET": SubResource("Animation_4itpy"),
"hit": SubResource("Animation_2gbre"),
"idle": SubResource("Animation_sg6r8"),
"walk": SubResource("Animation_vwbuu")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_k16ga"]
radius = 517.001

[sub_resource type="CircleShape2D" id="CircleShape2D_ucrra"]
radius = 41.1096

[node name="Enemy" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 8
collision_mask = 11
platform_on_leave = 2
platform_floor_layers = 4294901760
safe_margin = 1.0
script = ExtResource("1_6a0dd")

[node name="SpriteTransform" type="Marker2D" parent="."]
scale = Vector2(0.5, 0.5)

[node name="Sprite" type="Sprite2D" parent="SpriteTransform"]
texture = ExtResource("2_ls287")
offset = Vector2(0, -115)

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.156863)
position = Vector2(0, -22)
scale = Vector2(0.5, 0.33)
texture = ExtResource("2_fesmu")
offset = Vector2(0, 63.7879)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_sanha")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kjahw")
}
autoplay = "idle"

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_k16ga")

[node name="HurtArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtArea"]
shape = SubResource("CircleShape2D_ucrra")

[node name="StunTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="DetectionArea" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="HurtArea" to="." method="_on_hurt_area_body_entered"]
[connection signal="timeout" from="StunTimer" to="." method="_on_stun_timer_timeout"]
